# fastapi-awesome

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
aichat/: package-lock.json  package.json  pnpm-lock.yaml
aichat/app/chat/: layout.tsx  page.tsx
app/: README.md  alembic.ini  celery_app.py  config.py  main.py  temp.py
app/alembic/: env.py
app/alembic/versions/: 1fe2658f74da_init.py  2ad587735571_init.py  40c54eaf32f1_auto_update.py  525d5385198b_update.py  6599928aeaad_update.py  7b046ae1a53b_auto_update.py  813f78c9ea0a_auto_update.py  88df253660b5_fix.py  d34db253a4a4_init.py  d39248d013a4_init_tables.py  (+3 more)
app/api/: auth.py  files.py  task.py
app/constants/: __init__.py
app/core/: oauth.py  router.py  security.py
app/crud/: __init__.py  base.py  chat.py  task.py  upload_file.py  user.py
app/handlers/: exception_handler.py
app/lib/: db.py
app/models/: __init__.py  base.py  chat.py  common.py  db.py  task.py  user.py
app/schedule/: periodic.py  task.py
app/schemas/: chat.py  files.py  response.py  task.py  token.py  user.py
app/services/: file_service.py
app/tasks/: example.py  task.py
chatgpt/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
chatgpt/app/: globals.css  layout.tsx  page.tsx
chatgpt/context/: chat-context.tsx
chatgpt/service/: auth.ts  base.ts  task.ts
docker/: .env  docker-compose.yml  entrypoint.sh
docker/nginx/: fastapi.conf  nginx.conf
web/: .cta.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/src/: routeTree.gen.ts  styles.css
(+51 files in other folders)
